host: Fix interface tooltips

--- a/src/vmm-host.glade
+++ b/src/vmm-host.glade
@@ -1715,7 +1715,7 @@ here</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="has_tooltip">True</property>
-                            <property name="tooltip" translatable="yes">Add Pool</property>
+                            <property name="tooltip" translatable="yes">Add Interface</property>
                             <signal name="clicked" handler="on_interface_add_clicked"/>
                             <child>
                               <widget class="GtkImage" id="image2">
@@ -1736,7 +1736,7 @@ here</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="has_tooltip">True</property>
-                            <property name="tooltip" translatable="yes">Start Pool</property>
+                            <property name="tooltip" translatable="yes">Start Interface</property>
                             <signal name="clicked" handler="on_interface_start_clicked"/>
                             <child>
                               <widget class="GtkImage" id="someicon1">
@@ -1757,7 +1757,7 @@ here</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="has_tooltip">True</property>
-                            <property name="tooltip" translatable="yes">Stop Pool</property>
+                            <property name="tooltip" translatable="yes">Stop Interface</property>
                             <signal name="clicked" handler="on_interface_stop_clicked"/>
                             <child>
                               <widget class="GtkImage" id="image3">
@@ -1778,7 +1778,7 @@ here</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="has_tooltip">True</property>
-                            <property name="tooltip" translatable="yes">Delete Pool</property>
+                            <property name="tooltip" translatable="yes">Delete Interface</property>
                             <signal name="clicked" handler="on_interface_delete_clicked"/>
                             <child>
                               <widget class="GtkImage" id="image5">
