--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -856,6 +856,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="headers_visible">False</property>
+                            <signal name="button_press_event" handler="on_hw_list_button_press_event"/>
                           </widget>
                         </child>
                       </widget>
