--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -2395,32 +2395,107 @@ I/O:</property>
                                         <property name="top_padding">3</property>
                                         <property name="left_padding">12</property>
                                         <child>
-                                          <widget class="GtkTable" id="table2">
+                                          <widget class="GtkHBox" id="hbox10">
                                             <property name="visible">True</property>
-                                            <property name="n_rows">2</property>
-                                            <property name="row_spacing">3</property>
+                                            <property name="spacing">6</property>
                                             <child>
-                                              <widget class="GtkLabel" id="label4">
+                                              <widget class="GtkTable" id="table2">
                                                 <property name="visible">True</property>
-                                                <property name="xalign">0</property>
-                                                <property name="label" translatable="yes">Device virtual machine will _boot from:</property>
-                                                <property name="use_underline">True</property>
-                                                <property name="mnemonic_widget">config-boot-device</property>
+                                                <property name="n_rows">3</property>
+                                                <property name="n_columns">2</property>
+                                                <property name="column_spacing">6</property>
+                                                <property name="row_spacing">6</property>
+                                                <child>
+                                                  <widget class="GtkScrolledWindow" id="scrolledwindow3">
+                                                    <property name="width_request">20</property>
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="hscrollbar_policy">never</property>
+                                                    <property name="vscrollbar_policy">never</property>
+                                                    <property name="shadow_type">in</property>
+                                                    <child>
+                                                      <widget class="GtkTreeView" id="config-boot-list">
+                                                        <property name="visible">True</property>
+                                                        <property name="can_focus">True</property>
+                                                        <property name="headers_visible">False</property>
+                                                      </widget>
+                                                    </child>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="bottom_attach">3</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <widget class="GtkButton" id="config-boot-moveup">
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="receives_default">True</property>
+                                                    <signal name="clicked" handler="on_config_boot_moveup_clicked"/>
+                                                    <child>
+                                                      <widget class="GtkImage" id="image7">
+                                                        <property name="visible">True</property>
+                                                        <property name="stock">gtk-go-up</property>
+                                                      </widget>
+                                                    </child>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="left_attach">1</property>
+                                                    <property name="right_attach">2</property>
+                                                    <property name="x_options">GTK_FILL</property>
+                                                    <property name="y_options">GTK_FILL</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <widget class="GtkButton" id="config-boot-movedown">
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="receives_default">True</property>
+                                                    <signal name="clicked" handler="on_config_boot_movedown_clicked"/>
+                                                    <child>
+                                                      <widget class="GtkImage" id="image8">
+                                                        <property name="visible">True</property>
+                                                        <property name="stock">gtk-go-down</property>
+                                                      </widget>
+                                                    </child>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="left_attach">1</property>
+                                                    <property name="right_attach">2</property>
+                                                    <property name="top_attach">1</property>
+                                                    <property name="bottom_attach">2</property>
+                                                    <property name="x_options">GTK_FILL</property>
+                                                    <property name="y_options">GTK_FILL</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <widget class="GtkAlignment" id="alignment21">
+                                                    <property name="visible">True</property>
+                                                    <child>
+                                                      <placeholder/>
+                                                    </child>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="left_attach">1</property>
+                                                    <property name="right_attach">2</property>
+                                                    <property name="top_attach">2</property>
+                                                    <property name="bottom_attach">3</property>
+                                                    <property name="x_options">GTK_FILL</property>
+                                                  </packing>
+                                                </child>
                                               </widget>
                                               <packing>
-                                                <property name="x_options"></property>
-                                                <property name="y_options"></property>
+                                                <property name="position">0</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <widget class="GtkComboBox" id="config-boot-device">
+                                              <widget class="GtkAlignment" id="alignment20">
                                                 <property name="visible">True</property>
-                                                <signal name="changed" handler="on_config_boot_device_changed"/>
+                                                <child>
+                                                  <placeholder/>
+                                                </child>
                                               </widget>
                                               <packing>
-                                                <property name="top_attach">1</property>
-                                                <property name="bottom_attach">2</property>
-                                                <property name="x_options">GTK_FILL</property>
+                                                <property name="position">1</property>
                                               </packing>
                                             </child>
                                           </widget>
@@ -2430,7 +2505,7 @@ I/O:</property>
                                     <child>
                                       <widget class="GtkLabel" id="label1">
                                         <property name="visible">True</property>
-                                        <property name="label" translatable="yes">&lt;b&gt;Boot Device&lt;/b&gt;</property>
+                                        <property name="label" translatable="yes">&lt;b&gt;Boot device order&lt;/b&gt;</property>
                                         <property name="use_markup">True</property>
                                       </widget>
                                       <packing>
