host: interface: Allow changing start mode.

--- a/src/vmm-host.glade
+++ b/src/vmm-host.glade
@@ -1884,6 +1884,7 @@ here</property>
                         <child>
                           <widget class="GtkButton" id="interface-apply">
                             <property name="label">gtk-apply</property>
+                            <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="use_stock">True</property>
