Mark some strings as translatable

--- a/src/vmm-manager.glade
+++ b/src/vmm-manager.glade
@@ -25,7 +25,7 @@
                   <widget class="GtkMenu" id="menuitem4_menu">
                     <child>
                       <widget class="GtkImageMenuItem" id="menu_file_restore_saved">
-                        <property name="label">Restore Saved Machine...</property>
+                        <property name="label" translatable="yes">Restore Saved Machine...</property>
                         <property name="visible">True</property>
                         <property name="tooltip" translatable="yes">Restore a saved machine from a filesystem image</property>
                         <property name="use_underline">True</property>
@@ -47,7 +47,7 @@
                     </child>
                     <child>
                       <widget class="GtkImageMenuItem" id="open_connection">
-                        <property name="label">_Add Connection...</property>
+                        <property name="label" translatable="yes">_Add Connection...</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">False</property>
@@ -111,7 +111,7 @@
                     </child>
                     <child>
                       <widget class="GtkImageMenuItem" id="menu_edit_details">
-                        <property name="label">_Virtual Machine Details</property>
+                        <property name="label" translatable="yes">_Virtual Machine Details</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">False</property>
