--- a/src/vmm-create.glade
+++ b/src/vmm-create.glade
@@ -1538,7 +1538,17 @@ User shouldn't see this.</property>
                                       </packing>
                                     </child>
                                     <child>
-                                      <placeholder/>
+                                      <widget class="GtkAlignment" id="alignment13">
+                                        <property name="visible">True</property>
+                                        <child>
+                                          <placeholder/>
+                                        </child>
+                                      </widget>
+                                      <packing>
+                                        <property name="top_attach">5</property>
+                                        <property name="bottom_attach">6</property>
+                                        <property name="x_options">GTK_FILL</property>
+                                      </packing>
                                     </child>
                                   </widget>
                                 </child>
@@ -1574,12 +1584,33 @@ User shouldn't see this.</property>
                                         <property name="orientation">vertical</property>
                                         <property name="spacing">6</property>
                                         <child>
-                                          <widget class="GtkHBox" id="hbox8">
+                                          <widget class="GtkVBox" id="vbox6">
                                             <property name="visible">True</property>
-                                            <property name="spacing">6</property>
+                                            <property name="orientation">vertical</property>
                                             <child>
-                                              <widget class="GtkComboBox" id="config-netdev">
+                                              <widget class="GtkHBox" id="hbox8">
                                                 <property name="visible">True</property>
+                                                <property name="spacing">6</property>
+                                                <child>
+                                                  <widget class="GtkComboBox" id="config-netdev">
+                                                    <property name="visible">True</property>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">False</property>
+                                                    <property name="position">0</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <widget class="GtkImage" id="config-netdev-warn">
+                                                    <property name="visible">True</property>
+                                                    <property name="stock">gtk-dialog-warning</property>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="position">1</property>
+                                                  </packing>
+                                                </child>
                                               </widget>
                                               <packing>
                                                 <property name="expand">False</property>
@@ -1588,12 +1619,41 @@ User shouldn't see this.</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <widget class="GtkImage" id="config-netdev-warn">
+                                              <widget class="GtkAlignment" id="alignment21">
                                                 <property name="visible">True</property>
-                                                <property name="stock">gtk-dialog-warning</property>
+                                                <property name="top_padding">6</property>
+                                                <property name="left_padding">12</property>
+                                                <child>
+                                                  <widget class="GtkHBox" id="config-netdev-bridge-box">
+                                                    <property name="visible">True</property>
+                                                    <property name="spacing">6</property>
+                                                    <child>
+                                                      <widget class="GtkLabel" id="label39">
+                                                        <property name="visible">True</property>
+                                                        <property name="label" translatable="yes">_Bridge name:</property>
+                                                        <property name="use_underline">True</property>
+                                                        <property name="mnemonic_widget">config-netdev-bridge</property>
+                                                      </widget>
+                                                      <packing>
+                                                        <property name="expand">False</property>
+                                                        <property name="position">0</property>
+                                                      </packing>
+                                                    </child>
+                                                    <child>
+                                                      <widget class="GtkEntry" id="config-netdev-bridge">
+                                                        <property name="visible">True</property>
+                                                        <property name="can_focus">True</property>
+                                                        <property name="invisible_char">&#x25CF;</property>
+                                                      </widget>
+                                                      <packing>
+                                                        <property name="expand">False</property>
+                                                        <property name="position">1</property>
+                                                      </packing>
+                                                    </child>
+                                                  </widget>
+                                                </child>
                                               </widget>
                                               <packing>
-                                                <property name="expand">False</property>
                                                 <property name="position">1</property>
                                               </packing>
                                             </child>
